# pimms

./: .gitignore  LICENSE.txt  README.md  notes.org  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: deploy.yml  tests.yml
pimms/: __init__.py  _version.py  calc.py  calculation.py  cmdline.py  core.py  immutable.py  table.py  util.py
pimms/calculation/: __init__.py  _core.py
pimms/doc/: __init__.py  _core.py
pimms/immutable/: __init__.py  _core.py
pimms/iolib/: __init__.py  _core.py
pimms/lazydict/: __init__.py  _core.py
pimms/path/: _core.py
pimms/pathlib/: __init__.py  _cache.py  _core.py  _osf.py
pimms/plantype/: _core.py
pimms/test/: __init__.py  __main__.py  lazy_complex.py  normal_calc.py  test_pimms.py  tri_calc.py
pimms/test/doc/: __init__.py  test_core.py
pimms/test/iolib/: __init__.py  test_core.py
pimms/test/lazydict/: __init__.py  test_core.py
pimms/test/pathlib/: __init__.py  test_core.py  test_osf.py
pimms/test/types/: __init__.py  test_core.py  test_numeric.py  test_quantity.py
pimms/test/util/: __init__.py  test_core.py  test_numeric.py  test_quantity.py
pimms/test/workflow/: __init__.py  test_core.py  test_plantype.py
pimms/types/: __init__.py  _core.py  _numeric.py  _quant.py  _quantity.py
pimms/util/: __init__.py  _core.py  _numeric.py  _quantity.py  _url.py
pimms/workflow/: __init__.py  _core.py  _plantype.py
